[gd_scene load_steps=13 format=2]

[ext_resource path="res://monke_spritesheets/monke_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Audio/footstep1.wav" type="AudioStream" id=3]
[ext_resource path="res://Banan.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/footstep2.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/hit.wav" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 10.0

[sub_resource type="Animation" id=2]
resource_name = "catch"
length = 0.277778
step = 0.0555556
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0555556, 0.111111, 0.166667, 0.222222 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 11, 10, 9, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0555556 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "remove_catch_obj"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.388889
step = 0.0555556
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0555556, 0.111111, 0.166667, 0.222222, 0.277778, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../footsep fx 1:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.222222 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../footsep fx 2:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.333333 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=5]
length = 0.416667
step = 0.0416667
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.208333 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "throw"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15, 16, 7 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 16.1979

[node name="Player" type="KinematicBody2D"]
collision_mask = 26
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Banan = ExtResource( 4 )
speed = 5
throw_speed = 360

[node name="ThrowCooldown" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="ThrowPoint" type="Position2D" parent="."]
position = Vector2( 7.75873, -24.6607 )

[node name="Monke" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 6
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Monke"]
anims/catch = SubResource( 2 )
anims/run = SubResource( 3 )
anims/sit = SubResource( 4 )
anims/throw = SubResource( 5 )

[node name="CatchArea" type="Area2D" parent="."]
position = Vector2( 3.50394, -9.76099 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CatchArea"]
position = Vector2( 0, 0.117214 )
shape = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="footsep fx 1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -26.0

[node name="footsep fx 2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -32.0

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 6.0
pitch_scale = 0.8
[connection signal="timeout" from="ThrowCooldown" to="." method="_on_ThrowCooldown_timeout"]
[connection signal="animation_finished" from="Monke/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="CatchArea" to="." method="_on_CatchArea_area_entered"]
[connection signal="body_entered" from="CatchArea" to="." method="_on_CatchArea_body_entered"]
